@@ -31,7 +31,7 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH JOIN 1 "12/6/04" "Heirloom Toolchest" "User Commands"
+.TH JOIN 1 "2/2/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 join \- relational database operator
 .SH SYNOPSIS
@@ -116,7 +116,14 @@ The
 .I list
 may either consist of multiple arguments,
 or of a single argument with elements separated by spaces or commas.
-.PP
+For
+.B /usr/5bin/join
+and
+.BR /usr/5bin/s42/join ,
+the
+.I list
+may be empty,
+in which case the option has no effect.
 .TP
 .BI \-t c
 Use character
